; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_net.c_vlclua_net_send.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_net.c_vlclua_net_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_NOSIGNAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_net_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_net_send(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @luaL_checkinteger(i32* %7, i32 1)
  %9 = call i32 @vlclua_fd_get(i32* %6, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i8* @luaL_checklstring(i32* %10, i32 2, i64* %4)
  store i8* %11, i8** %5, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @luaL_optinteger(i32* %12, i32 3, i64 %13)
  store i64 %14, i64* %4, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = icmp ne i32 %16, -1
  br i1 %17, label %18, label %24

18:                                               ; preds = %1
  %19 = load i32, i32* %3, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = load i64, i64* %4, align 8
  %22 = load i32, i32* @MSG_NOSIGNAL, align 4
  %23 = call i32 @send(i32 %19, i8* %20, i64 %21, i32 %22)
  br label %25

24:                                               ; preds = %1
  br label %25

25:                                               ; preds = %24, %18
  %26 = phi i32 [ %23, %18 ], [ -1, %24 ]
  %27 = call i32 @lua_pushinteger(i32* %15, i32 %26)
  ret i32 1
}

declare dso_local i32 @vlclua_fd_get(i32*, i32) #1

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i64 @luaL_optinteger(i32*, i32, i64) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @send(i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
